--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -28,7 +28,7 @@
     </form>
 </div>
 
-<div class="chat">
+<div class="chat" style="display: none">
     <div class="messages"></div>
 
     <form>
