--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -33,6 +33,7 @@
     <a class="createRoom btn">Create Room</a>
     <a class="joinRoom btn">Join Room</a>
 
+    <h1 class="roomName"></h1>
     <div class="messages"></div>
 
     <form>
