Working on basic multi user support

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -37,7 +37,7 @@
     <div class="messages"></div>
 
     <form>
-        <textarea class="messageToSend"></textarea>
+        <input type="text" class="messageToSend"/>
         <button class="sendMessage">Send</button>
     </form>
 </div>
