Working on basic multi user support

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -24,16 +24,19 @@
             <div class="spinny"></div>
             <a id="login-login" class="btn large hoverfade"><span class="source">Log in</span><span
                     class="hover" style="opacity: 0; "></span></a>
-            <button type="submit" style="height: 0; width: 0; border: 0;"></button>
         </fieldset>
     </form>
 </div>
 
-<div class="chat" style="display: none">
+<div class="roomBtns" style="display: none">
     <a class="createRoom btn">Create Room</a>
     <a class="joinRoom btn">Join Room</a>
+</div>
+
+<div class="chat" style="display: none">
 
     <h1 class="roomName"></h1>
+
     <div class="messages"></div>
 
     <form>
