--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -73,7 +73,7 @@
 </div>
 
 <div style="display:none" type="text/x-handlebars-template" id="template-user">
-    <div class="user" title="{{nickname}}"><img src="{{avatarpath}}" width="30" height="30"/></div>
+    <div data-userkey="{{userKey}}" class="user" title="{{nickname}}"><img src="{{avatarpath}}" width="30" height="30"/></div>
 </div>
 
 
